Implementando herança nas classes ProgressaoAritmetica e ProgressaoGeometrica com a classe virtual Progressao

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,5 +5,6 @@ set(CMAKE_CXX_STANDARD 20)
 
 add_executable(Matematicador
         main.cpp
-        ProgressaoAritmetica.cpp
-        ProgressaoGeometrica.cpp)
+        progressao/ProgressaoAritmetica.cpp
+        progressao/ProgressaoGeometrica.cpp
+        progressao/Progressao.h)
